--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ python:
   - "3.6.6"
 install:
   - cp contrib/env-sample .env
-  - pip install -r requirements-dev.txt
+  - pip install -r requirements-dev.txt codecov
 script:
   - flake8
   - pycodestyle pybling/
   - pyflakes pybling/
   - python -m doctest README.md -v
-  - pytest tests/tests.py --verbosity=1
+  - pytest tests/tests.py --verbosity=1 --cov=pybling
+after_success:
+  - codecov
