--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: python
 python:
-  - "3.6.6"
+  - "3.7-dev"
 install:
   - cp contrib/env-sample .env
   - pip install -r requirements-dev.txt codecov
 script:
-  - flake8
-  - pycodestyle pybling/
+  - flake8 .
+  - pycodestyle .
   - pyflakes pybling/
   - python -m doctest README.md pybling/notas.py -v
   - pytest tests/tests.py --verbosity=1 --cov=pybling
