--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,26 @@
+[flake8]
+exclude =
+    .git,
+    *migrations*,
+    __pycache__,
+    docs/source/conf.py,
+    old,
+    build,
+    dist,
+    venv
+max-line-length = 119
+
 [pycodestyle]
-max-line-length = 160
+exclude =
+    .git,
+    *migrations*,
+    __pycache__,
+    docs/source/conf.py,
+    old,
+    build,
+    dist,
+    venv
+count = False
+ignore = E226,E302,E41
+max-line-length = 119
 statistics = True
