--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,21 +1,12 @@
 # Pytest
-atomicwrites==1.3.0
-attrs==19.2.0
-more-itertools==7.2.0
-pluggy==0.13.0
-py==1.8.0
-pytest==5.2.0
-six==1.12.0
+pytest==5.3.5
 
-# Flake8
-flake8==3.7.8
-mccabe==0.6.1
+# Lint
+flake8==3.7.9
 pycodestyle==2.5.0
-pyflakes==2.1.1
 
 # Covarage
-coverage==4.5.4
-pytest-cov==2.7.1
-
+coverage==5.0.3
+pytest-cov==2.8.1
 
 -r requirements.txt
